--- a/modude1/Bai5_html_form_table/Bai_tap/Tao_form_don_gian/TaoFormDonGian.html
+++ b/modude1/Bai5_html_form_table/Bai_tap/Tao_form_don_gian/TaoFormDonGian.html
@@ -15,7 +15,7 @@
                         <label for="yourname">Họ và tên</label>
                     </td>
                     <td>
-                        <input type="text" name="yourname" id="yourname" size="30" >
+                        <input type="text" name="yourname" id="yourname" size="35" >
                     </td>
                 </tr>
                 <tr>
@@ -23,20 +23,30 @@
                         <label for="email">Email</label>
                     </td>
                     <td>
-                        <input type="email" name="email" id="email" size="15">
+                        <input type="email" name="email" id="email" size="20">
                     </td>
                 </tr>
                 <tr>
-                    <td class="imf a">
+                    <td class="imf">
                         Sở thích
                     </td>
                     <td>
                         <label class="hobby"><input type="checkbox" name="hobby">Thể thao</label>
                         <label class="hobby"><input type="checkbox" name="hobby">Âm nhạc</label>
-                        <label class="hobby"><input type="checkbox" name="hobby">Đọc sách</label><br>
-                        <label class="hobby"><input type="checkbox" name="hobby">Lướt web</label>
+                        <label class="hobby"><input type="checkbox" name="hobby">Đọc sách</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                        <label class="hobby"><input type="checkbox" name="hobby">lướt web</label>
                         <label class="hobby"><input type="checkbox" name="hobby">Chơi game</label>
-                        <label class="hobby"><input type="checkbox" name="hobby">Điện ảnh</label><br>
+                        <label class="hobby"><input type="checkbox" name="hobby">Điện ảnh</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
                         <label class="hobby"><input type="checkbox" name="hobby">Du lịch</label>
                     </td>
                 </tr>
