--- a/modude1/Bai5_html_form_table/Bai_tap/Tao_form_don_gian/SoThichCuaBan.html
+++ b/modude1/Bai5_html_form_table/Bai_tap/Tao_form_don_gian/SoThichCuaBan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="TaoFormĐonGian.css">
+    <link rel="stylesheet" href="SoThichCuaBan.css">
     <title>Tao form don gian</title>
 </head>
 <body>
@@ -59,5 +59,6 @@
             </table>
         </form>
     </div>
+    
 </body>
 </html>
