--- a/modude1/Bai5_html_form_table/Bai_tap/Tao_ban_co_vua/TaoBanCoVua.html
+++ b/modude1/Bai5_html_form_table/Bai_tap/Tao_ban_co_vua/TaoBanCoVua.html
@@ -9,18 +9,18 @@
     <table>
         <tr>
             <td></td>
-            <td class="aa">1</td>
+            <td>1</td>
             <td>2</td>
-            <td >3</td>
+            <td>3</td>
             <td>4</td>
             <td>5</td>
             <td>6</td>
             <td>7</td>
             <td>8</td>
         </tr>
-        <tr>
+        <tr class="row2">
             <td>A</td>
-            <td class="aa"></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -29,9 +29,9 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr class="row1">
             <td>B</td>
-            <td class="aa"></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -40,7 +40,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr class="row2">
             <td>C</td>
             <td></td>
             <td></td>
@@ -51,7 +51,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr class="row1">
             <td>D</td>
             <td></td>
             <td></td>
@@ -62,7 +62,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr class="row2">
             <td>E</td>
             <td></td>
             <td></td>
@@ -73,7 +73,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr class="row1">
             <td>F</td>
             <td></td>
             <td></td>
@@ -84,7 +84,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr class="row2">
             <td>G</td>
             <td></td>
             <td></td>
@@ -95,7 +95,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr class="row1">
             <td>H</td>
             <td></td>
             <td></td>
