--- a/modude1/Bai7_bien_kieu_du_lieu_va_toan_tu/Bai_tap/Ung_dung_may_tinh/UngDungMayTinh.html
+++ b/modude1/Bai7_bien_kieu_du_lieu_va_toan_tu/Bai_tap/Ung_dung_may_tinh/UngDungMayTinh.html
@@ -18,9 +18,9 @@
         </div>
         <div>
             <button type="button" onclick="cong()">addition(+)</button>
-            <button type="button" onclick="tru">subtraction(-)</button>
-            <button type="button" onclick="nhan">multiplication(x)</button>
-            <button type="button" onclick="chia">Division(/)</button>
+            <button type="button" onclick="tru()">subtraction(-)</button>
+            <button type="button" onclick="nhan()">multiplication(x)</button>
+            <button type="button" onclick="chia()">Division(/)</button>
         </div>
         <p id="kq"></p>
 </body>
