--- a/modude1/Bai7_bien_kieu_du_lieu_va_toan_tu/Bai_tap/Ung_dung_chuyen_doi_tien_te/UngDungChuyenDoiTienTe.html
+++ b/modude1/Bai7_bien_kieu_du_lieu_va_toan_tu/Bai_tap/Ung_dung_chuyen_doi_tien_te/UngDungChuyenDoiTienTe.html
@@ -14,7 +14,7 @@
 
         <div>
             <label for="fcurrency"><b>Form Currency</b></label><br>
-            <select id="fcurrency">
+            <select id="fcurrency" onchange="currency()">
                 <option value="vn">Vietnam</option>
                 <option value="usd">USD</option>
             </select>
@@ -22,7 +22,7 @@
 
         <div>
             <label for="tcurrency" ><b>To Currency</b></label><br>
-            <select name="" id="tcurrency">
+            <select name="" id="tcurrency" onchange="currency()">
                 <option value="usd">USD</option>
                 <option value="vn">Vietnam</option>
             </select>
