--- a/modude1/Bai9_cau_truc_dieu_kien_2/Bai_tap/Cau_lenh_switch_case/CauLenhSwitchCase.html
+++ b/modude1/Bai9_cau_truc_dieu_kien_2/Bai_tap/Cau_lenh_switch_case/CauLenhSwitchCase.html
@@ -7,7 +7,7 @@
 <body>
     <form>
         <input type="number" id="date">
-        <button onclick="cal()">Tính số ngày</button>
+        <button type="button" onclick="cal()">Tính số ngày</button>
     </form>
     <p id="kq"></p>
 </body>
