--- a/modude1/Bai11_cau_truc_lap_2/Hien_thi_cac_so_nguyen_to_dau_tien/HienThiCacSoNguyenToDauTien.html
+++ b/modude1/Bai11_cau_truc_lap_2/Hien_thi_cac_so_nguyen_to_dau_tien/HienThiCacSoNguyenToDauTien.html
@@ -8,17 +8,22 @@
     <script>
         var numbers = 20;
         var count = 0;
-        var N = 3;
+        var n = 2;
+        var ktr = true;
         while (count < numbers) {
-            for (i = 2; i < N; i++){
-                if (N % i == 0) {
-                    N++;
+            for (i = 2; i < n; i++){
+                if (n % i == 0){
+                    ktr = false;
+                    break
                 } else {
-                    document.write(N);
-                    N++;
-                    count++
+                    ktr = true;
                 }
             }
+            if(ktr == true) {
+                document.write(n + '<br>')
+                count++;
+            }
+            n++;
         }
     </script>
 </body>
