--- a/modude1/Bai11_cau_truc_lap_2/Luyen_tap_vong_lap_02/Bai03.html
+++ b/modude1/Bai11_cau_truc_lap_2/Luyen_tap_vong_lap_02/Bai03.html
@@ -15,7 +15,7 @@
             n++;
         }
 
-        document.write('------------' + '<br>')
+        document.write('------------' + '<br>');
 
         var n = 5;
         while (n > 0){
@@ -24,6 +24,38 @@
             }
             document.write('<br>')
             n--;
+        }
+
+        document.write('------------' + '<br>');
+
+        var m = 1;
+        var n = 5;
+        while (n > 0){
+            for (i = 0; i < n; i++) {
+                document.write('-')
+            }
+            for (i = 0; i < m; i++) {
+                document.write('*')
+            }
+            document.write('<br>')
+            n--;
+            m++;
+        }
+
+        document.write('------------' + '<br>');
+
+        var m = 1;
+        var n = 5;
+        while (n > 0){
+            for (i = 0; i < m; i++) {
+                document.write('-')
+            }
+            for (i = 0; i < n; i++) {
+                document.write('*')
+            }
+            document.write('<br>')
+            n--;
+            m++;
         }
     </script>
 </body>
