--- a/modude1/Bai11_cau_truc_lap_2/Luyen_tap_vong_lap_02/Bai03.html
+++ b/modude1/Bai11_cau_truc_lap_2/Luyen_tap_vong_lap_02/Bai03.html
@@ -32,7 +32,7 @@
         var n = 5;
         while (n > 0){
             for (i = 0; i < n; i++) {
-                document.write('-')
+                document.write('&nbsp&nbsp')
             }
             for (i = 0; i < m; i++) {
                 document.write('*')
@@ -48,7 +48,7 @@
         var n = 5;
         while (n > 0){
             for (i = 0; i < m; i++) {
-                document.write('-')
+                document.write('&nbsp&nbsp')
             }
             for (i = 0; i < n; i++) {
                 document.write('*')
