--- a/modude1/Bai11_cau_truc_lap_2/Luyen_tap_vong_lap_02/Bai04.html
+++ b/modude1/Bai11_cau_truc_lap_2/Luyen_tap_vong_lap_02/Bai04.html
@@ -23,7 +23,7 @@
                 if (i == 1 || j == 1 || i == n || j == m){
                     document.write('*');
                 } else {
-                    document.write("_");
+                    document.write("&nbsp&nbsp");
                 }
             }
             document.write('<br>')
