--- a/modude1/Bai13_mang_2/Bai_tap/Tic_tac_toe/TicTacToe.html
+++ b/modude1/Bai13_mang_2/Bai_tap/Tic_tac_toe/TicTacToe.html
@@ -5,8 +5,96 @@
     <title>Title</title>
 </head>
 <body>
+    <h3>Caro Game Simple</h3>
+    <p id="carogame" />
+    <input type="button" value="Change Value" onclick="changeValue()">
     <script>
+        let b = document.getElementById("carogame");
+        let board = [];
+        let data = "";
+        var player = 1;
+        // var a =  (board[0][0] == 'X' && board[0][1] == 'X' && board[0][2] == 'X'
+        //     || board[1][0] == 'X' && board[1][1] == 'X' && board[1][2] == 'X'
+        //     || board[2][0] == 'X' && board[2][1] == 'X' && board[2][2] == 'X'
+        //     || board[0][0] == 'X' && board[1][0] == 'X' && board[2][0] == 'X'
+        //     || board[0][1] == 'X' && board[1][1] == 'X' && board[2][1] == 'X'
+        //     || board[0][2] == 'X' && board[1][2] == 'X' && board[2][2] == 'X'
+        //     || board[0][0] == 'X' && board[1][1] == 'X' && board[2][2] == 'X'
+        //     || board[2][0] == 'X' && board[1][1] == 'X' && board[0][2] == 'X');
+        //
+        // var b = (board[0][0] == 'O' && board[0][1] == 'O' && board[0][2] == 'O'
+        //     || board[1][0] == 'O' && board[1][1] == 'O' && board[1][2] == 'O'
+        //     || board[2][0] == 'O' && board[2][1] == 'O' && board[2][2] == 'O'
+        //     || board[0][0] == 'O' && board[1][0] == 'O' && board[2][0] == 'O'
+        //     || board[0][1] == 'O' && board[1][1] == 'O' && board[2][1] == 'O'
+        //     || board[0][2] == 'O' && board[1][2] == 'O' && board[2][2] == 'O'
+        //     || board[0][0] == 'O' && board[1][1] == 'O' && board[2][2] == 'O'
+        //     || board[2][0] == 'O' && board[1][1] == 'O' && board[0][2] == 'O');
+        for (let i = 0; i < 3; i++) {
+            board[i] = [0, 0, 0];
+            data += "<br/>";
+            for (let j = 0; j < 3; j++) {
+                data += board[i][j] + "&nbsp;&nbsp;&nbsp;";
+            }
+        }
+        data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
+        b.innerHTML = data;
 
+        function changeValue() {
+           if (player == 1) {
+               let positionX = prompt("X: ");
+               let positionY = prompt("Y: ");
+               data = "";
+               board[positionX][positionY] = "X";
+               for (let i = 0; i < 3; i++) {
+                   data += "<br/>";
+                   for (let j = 0; j < 3; j++) {
+                       data += board[i][j] + "&nbsp;&nbsp;&nbsp;";
+                   }
+               }
+               data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
+               b.innerHTML = "<hr/>" + data;
+               player = 2;
+           } else {
+               let positionX = prompt("X: ");
+               let positionY = prompt("Y: ");
+               data = "";
+               board[positionX][positionY] = "O";
+               for (let i = 0; i < 3; i++) {
+                   data += "<br/>";
+                   for (let j = 0; j < 3; j++) {
+                       data += board[i][j] + "&nbsp;&nbsp;&nbsp;";
+                   }
+               }
+               data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
+               b.innerHTML = "<hr/>" + data;
+               player = 1;
+           }
+
+           if ((board[0][0] == 'X' && board[0][1] == 'X' && board[0][2] == 'X'
+                   || board[1][0] == 'X' && board[1][1] == 'X' && board[1][2] == 'X'
+                   || board[2][0] == 'X' && board[2][1] == 'X' && board[2][2] == 'X'
+                   || board[0][0] == 'X' && board[1][0] == 'X' && board[2][0] == 'X'
+                   || board[0][1] == 'X' && board[1][1] == 'X' && board[2][1] == 'X'
+                   || board[0][2] == 'X' && board[1][2] == 'X' && board[2][2] == 'X'
+                   || board[0][0] == 'X' && board[1][1] == 'X' && board[2][2] == 'X'
+                   || board[2][0] == 'X' && board[1][1] == 'X' && board[0][2] == 'X')) {
+               alert('player 1 win')
+           }
+           else if ((board[0][0] == 'O' && board[0][1] == 'O' && board[0][2] == 'O'
+                   || board[1][0] == 'O' && board[1][1] == 'O' && board[1][2] == 'O'
+                   || board[2][0] == 'O' && board[2][1] == 'O' && board[2][2] == 'O'
+                   || board[0][0] == 'O' && board[1][0] == 'O' && board[2][0] == 'O'
+                   || board[0][1] == 'O' && board[1][1] == 'O' && board[2][1] == 'O'
+                   || board[0][2] == 'O' && board[1][2] == 'O' && board[2][2] == 'O'
+                   || board[0][0] == 'O' && board[1][1] == 'O' && board[2][2] == 'O'
+                   || board[2][0] == 'O' && board[1][1] == 'O' && board[0][2] == 'O')) {
+               alert('player 2 win')
+           }
+           else {
+               // alert('hòa')
+           }
+        }
     </script>
 </body>
 </html>
