--- a/modude1/Bai13_mang_2/Bai_tap/Luyen_tap_mang_02/Bai06.html
+++ b/modude1/Bai13_mang_2/Bai_tap/Luyen_tap_mang_02/Bai06.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <script>
-        
+        var a =  ['d','-','3','-'];
+        document.write(a.toString().replace(/-/g, '_'))
     </script>
 </body>
 </html>
