--- a/modude1/Bai16_lap_trinh_huong_doi_tuong_1/Bai_tap/XayDungDienThoai.html
+++ b/modude1/Bai16_lap_trinh_huong_doi_tuong_1/Bai_tap/XayDungDienThoai.html
@@ -6,7 +6,12 @@
 </head>
 <body>
     <script>
-        
+        var person = {
+            name: 'Smith',
+            age: 32,
+            gender: 'male'
+        }
+        alert( person.name)
     </script>
 </body>
 </html>
