--- a/modude1/Bai17_lap_trinh_huong_doi_tuong_2/Thuc_hanh/XayDungDenPin.html
+++ b/modude1/Bai17_lap_trinh_huong_doi_tuong_2/Thuc_hanh/XayDungDenPin.html
@@ -18,51 +18,42 @@
                     this.energy--;
                 };
             };
+        };
+
+        class FlashLamp {
+            constructor() {
+            }
+            setBattery(battery){
+                this.battery = battery;
+            }
+            getBatteryInfo() {
+                return this.battery.getEnergy();
+            }
+            light() {
+                if (this.status) {
+                    document.write('sáng' + '<br>');
+                } else {
+                    document.write('ko sáng' + '<br>');
+                }
+            };
+            turnOn(){
+                this.status = true;
+            }
+            turnOff(){
+                this.status = false;
+            }
         }
-        // let FlashLamp = function () {
-        //
-        //     this.setBattery = function (battery) {
-        //         this.battery = battery;
-        //     };
-        //
-        //     this.getBatteryInfo = function () {
-        //         return this.battery.getEnergy();
-        //     };
-        //
-        //     this.light = function () {
-        //         if(this.status){
-        //             alert("Lighting");
-        //         } else {
-        //             alert("Not lighting");
-        //         }
-        //     };
-        //
-        //     this.turnOn = function () {
-        //         this.status = true;
-        //     };
-        //
-        //     this.turnOff = function () {
-        //         this.status = false;
-        //     }
-        // };
-        //
-        // let battery = new Battery();
-        // battery.setEnergy(10);
-        //
-        // let flashLamp = new FlashLamp();
-        // flashLamp.setBattery(battery);
-        //
-        // document.write("Battery info:" + flashLamp.getBatteryInfo() + "<br/>");
-        // flashLamp.light();
-        //
-        // document.write("Turn on<br/>")
-        // flashLamp.turnOn();
-        // flashLamp.light();
-        // document.write("Battery info:" + flashLamp.getBatteryInfo() + "<br/>");
-        //
-        // document.write("Turn off<br/>")
-        // flashLamp.turnOff();
-        // flashLamp.light();
+        let battery = new Battery(10);
+
+        let flashLamp = new FlashLamp();
+        flashLamp.setBattery(battery);
+        document.write("Battery info:" + flashLamp.getBatteryInfo() + "<br/>");
+        flashLamp.light();
+        document.write('bật đèn' + '<br>');
+        flashLamp.turnOn();
+        flashLamp.light();
+        battery.decreaseEnergy();
+        document.write("Battery info:" + flashLamp.getBatteryInfo() + "<br/>");
     </script>
 </body>
 </html>
