--- a/modude1/Bai16_lap_trinh_huong_doi_tuong_1/Bai_tap/XayDungLopHCN.html
+++ b/modude1/Bai16_lap_trinh_huong_doi_tuong_1/Bai_tap/XayDungLopHCN.html
@@ -28,11 +28,12 @@
             }
         };
         let a = new Rectangle(4,5);
-        document.write(a.getLength())
-        document.write(a.getArea());
+        document.write('chiều dài: ' + a.getLength() + '<br>')
+        document.write('chiều rộng: ' + a.getWidth() + '<br>')
+        document.write( 'diện tích 1: ' + a.getArea()+ '<br>');
         a.setLength(10);
         a.setWidth(5);
-        document.write(a.getArea())
+        document.write('diện tích 2: ' + a.getArea()+ '<br>')
     </script>
 </body>
 </html>
