--- a/modude1/Case_study/Yeu_cau_4/Bai3.html
+++ b/modude1/Case_study/Yeu_cau_4/Bai3.html
@@ -6,19 +6,31 @@
 </head>
 <body>
 <script>
-    var a = prompt('nhập kí tự');
-    var b = a.split("");
-    var c = prompt('nhập kí tự');
-    var d = c.split("");
-    var x = [];
-    for (i=0;i<b.length;i++){
-        if (d.indexOf(b[i]) != -1){
-            x.push(b[i]);
-            d.splice(d.indexOf(b[i]),1);
+    // var a = prompt('nhập kí tự');
+    // var b = a.split("");
+    // var c = prompt('nhập kí tự');
+    // var d = c.split("");
+    // var x = [];
+    // for (i=0;i<b.length;i++){
+    //     if (d.indexOf(b[i]) != -1){
+    //         x.push(b[i]);
+    //         d.splice(d.indexOf(b[i]),1);
+    //     }
+    // }
+    //
+    // document.write('có ' + x.length + '  kí tự chung: ' + x)
+    var x = prompt('nhâp');
+    var a = x.split('');
+    var y = prompt('nhập');
+    var b = y.split('');
+    var c = [];
+    for (i = 0;i < a.length;i++){
+        if (b.indexOf(a[i]) != -1){
+            c.push(a[i]);
+            b.splice(b.indexOf(a[i]),1);
         }
     }
-
-    document.write('có ' + x.length + '  kí tự chung: ' + x)
+    document.write(c.join(''))
 </script>
 </body>
 </html>
